[enhancement] Including module-info.java in the JAR artifacts.