@@ -1,6 +1,6 @@
 /*
  * Copyright 2013-2014 SmartBear Software
- * Copyright 2014-2015 The TestFX Contributors
+ * Copyright 2014-2019 The TestFX Contributors
  *
  * Licensed under the EUPL, Version 1.1 or - as soon they will be approved by the
  * European Commission - subsequent versions of the EUPL (the "Licence"); You may
@@ -14,6 +14,8 @@
  * CONDITIONS OF ANY KIND, either express or implied. See the Licence for the
  * specific language governing permissions and limitations under the Licence.
  */
+apply plugin: 'java-library'
+
 ext.pomDescription = 'TestFX Core'
 ext.moduleName = 'org.testfx'
 ext.openjfxVersion = '11'
@@ -36,67 +38,106 @@ static def getOSName() {
 
 ext.platform = getOSName()
 
-dependencies {
-    if (JavaVersion.current().isJava10Compatible()) {
-        // In case we are on an Oracle JDK with JavaFX builtin, these will be ignored.
-        compile "org.openjfx:javafx-base:${openjfxVersion}:${platform}"
-        compile "org.openjfx:javafx-controls:${openjfxVersion}:${platform}"
-        compile "org.openjfx:javafx-graphics:${openjfxVersion}:${platform}"
-        compile "org.openjfx:javafx-swing:${openjfxVersion}:${platform}"
-        compile "org.openjfx:javafx-fxml:${openjfxVersion}:${platform}"
-    }
-
-    compile 'org.hamcrest:hamcrest-core:1.3'
-    testCompile 'org.hamcrest:hamcrest-core:1.3'
-    compile "org.assertj:assertj-core:3.13.2"
-    testCompile "org.assertj:assertj-core:3.13.2"
-    compileOnly 'org.osgi:org.osgi.core:6.0.0'
-    testCompile "junit:junit:4.13-beta-3"
-    testCompile "org.mockito:mockito-core:3.0.0"
-    testCompile project(":testfx-junit")
-    if (JavaVersion.current().isJava11Compatible()) {
-        // FIXME(mike): Really we should be checking if OpenJFX version is > 11.
-        testCompile "org.testfx:openjfx-monocle:jdk-11+26"
-    } else if (JavaVersion.current().isJava10Compatible() &&
-            System.getProperty("java.vm.name").toLowerCase().contains("openjdk")) {
-        testCompile "org.testfx:openjfx-monocle:jdk-11+26"
-    } else if (JavaVersion.current().isJava9Compatible()) {
-        testCompile "org.testfx:openjfx-monocle:jdk-9+181"
-    } else {
-        testCompile "org.testfx:openjfx-monocle:8u76-b04"
-    }
-}
-
-sourceSets {
-    if (!JavaVersion.current().isJava9Compatible()) {
-        main {
-            java {
-                exclude '**/module-info.java'
+// This insanity should be removed when JUnit 4 uses hamcrest 2.1.
+// See: https://github.com/junit-team/junit4/pull/1608
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails dep ->
+        if (dep.requested.group == 'org.hamcrest') {
+            switch (dep.requested.name) {
+                case 'java-hamcrest':
+                    dep.useTarget("org.hamcrest:hamcrest:${dep.target.version}")
+                    dep.because("2.0.0.0 shouldn't have been published")
+                    break
+                case 'hamcrest-core':
+                    dep.useTarget("org.hamcrest:hamcrest:${dep.target.version}")
+                    dep.because("hamcrest-core doesn't contain anything")
+                    break
+                case 'hamcrest-library':
+                    dep.useTarget("org.hamcrest:hamcrest:${dep.target.version}")
+                    dep.because("hamcrest-library doesn't contain anything")
+                    break
             }
         }
     }
 }
 
-compileJava {
-    if (JavaVersion.current().isJava9Compatible()) {
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            options.compilerArgs = [
-                    '--module-path', classpath.asPath,
-                    '--add-modules', 'javafx.base',
-                    '--add-modules', 'javafx.controls',
-                    '--add-modules', 'javafx.graphics',
-                    '--add-modules', 'javafx.swing',
-                    '--add-modules', 'javafx.fxml',
-                    "--add-exports", "javafx.graphics/com.sun.glass.ui=$moduleName",
-                    "--add-exports", "javafx.graphics/com.sun.javafx.application=$moduleName",
-            ]
-            classpath = files()
+afterEvaluate {
+    dependencies {
+        if (JavaVersion.current().isJava10Compatible()) {
+            // In case we are on an Oracle JDK with JavaFX builtin, these will be ignored.
+            implementation "org.openjfx:javafx-base:${openjfxVersion}:${platform}"
+            implementation "org.openjfx:javafx-controls:${openjfxVersion}:${platform}"
+            implementation "org.openjfx:javafx-graphics:${openjfxVersion}:${platform}"
+            implementation "org.openjfx:javafx-swing:${openjfxVersion}:${platform}"
+            implementation "org.openjfx:javafx-fxml:${openjfxVersion}:${platform}"
         }
 
-        javadoc {
-            afterEvaluate {
-                exclude "**/module-info.java"
+        implementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
+
+        // Empty shim JAR for JUnit4.
+        implementation group: 'org.hamcrest', name: 'hamcrest-core', version: '2.1'
+
+        implementation "org.assertj:assertj-core:3.13.2"
+        implementation 'org.osgi:org.osgi.core:6.0.0'
+        testImplementation ("junit:junit:4.13-beta-3") {
+            exclude group: 'org.hamcrest', module: 'hamcrest-core'
+        }
+        testImplementation "org.mockito:mockito-core:3.0.0"
+
+        if (JavaVersion.current().isJava12Compatible()) {
+            testCompile 'org.testfx:openjfx-monocle:jdk-12.0.1+2'
+        } else if (JavaVersion.current().isJava11Compatible()) {
+            testCompile "org.testfx:openjfx-monocle:jdk-11+26"
+        } else if (JavaVersion.current().isJava10Compatible() &&
+                System.getProperty("java.vm.name").toLowerCase().contains("openjdk")) {
+            testCompile "org.testfx:openjfx-monocle:jdk-11+26"
+        } else if (JavaVersion.current().isJava9Compatible()) {
+            testCompile "org.testfx:openjfx-monocle:jdk-9+181"
+        } else {
+            testCompile "org.testfx:openjfx-monocle:8u76-b04"
+        }
+    }
+
+    configurations {
+        apiElements {
+            sourceCompatibility = JavaVersion.VERSION_1_8
+            targetCompatibility = JavaVersion.VERSION_1_8
+        }
+    }
+
+    if (JavaVersion.current().isJava9Compatible()) {
+        task compileModuleInfoJava(type: JavaCompile) {
+            dependsOn 'compileJava'
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', compileJava.classpath.asPath,
+                ]
+            }
+            options.encoding = 'UTF-8'
+            classpath = files()
+            source = sourceSets.main.allJava
+            sourceCompatibility = JavaVersion.VERSION_1_9
+            targetCompatibility = JavaVersion.VERSION_1_9
+            destinationDir = compileJava.destinationDir
+            include '*module-info*'
+        }
+        classes.dependsOn compileModuleInfoJava
+        def dependents = configurations.api.dependencies + configurations.implementation.dependencies
+        def dependentProjects = dependents.findAll { it instanceof ProjectDependency }
+        dependentProjects.each { dependency ->
+            compileModuleInfoJava.dependsOn ":${dependency.name}:compileModuleInfoJava"
+        }
+    }
+
+    compileJava {
+        exclude '*module-info*'
+    }
+
+    javadoc {
+        afterEvaluate {
+            exclude '*module-info*'
+            if (JavaVersion.current().isJava9Compatible()) {
+                include '*module-info*'
                 options.addStringOption('-module-path', classpath.asPath)
                 options.addMultilineStringsOption('-add-exports').setValue([
                         'javafx.graphics/com.sun.javafx.application=org.testfx',
@@ -104,36 +145,52 @@ compileJava {
             }
         }
     }
-}
 
-compileTestJava {
-    if (JavaVersion.current().isJava9Compatible()) {
-        inputs.property("moduleName", moduleName)
-        doFirst {
-            options.compilerArgs = [
-                    '--module-path', classpath.asPath,
-                    '--add-modules', 'javafx.fxml',
-                    '--add-modules', 'junit',
-                    '--add-modules', 'org.testfx.junit',
-                    '--add-reads', "$moduleName=javafx.fxml",
-                    '--add-reads', "$moduleName=junit",
-                    '--add-reads', "$moduleName=org.testfx.junit",
-                    "--add-exports", "javafx.graphics/com.sun.glass.ui=$moduleName",
-                    "--add-exports", "javafx.graphics/com.sun.javafx.application=$moduleName",
-                    '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-            ]
-            classpath = files()
+    compileTestJava {
+        exclude '*module-info*'
+    }
+
+    test {
+        if (JavaVersion.current().isJava9Compatible()) {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                jvmArgs = [
+                        '--module-path', classpath.asPath,
+                        '--add-modules', 'ALL-MODULE-PATH',
+                        '--add-exports', 'org.testfx/org.testfx.service.locator.impl=junit',
+                        '--add-exports', 'org.testfx/org.testfx.service.query.impl=junit',
+                        '--add-exports', 'org.testfx/org.testfx.service.finder.impl=junit',
+                        '--add-exports', 'org.testfx/org.testfx.service.adapter.impl=junit',
+                        '--add-exports', 'org.testfx/org.testfx.service.support.impl=junit',
+                        '--add-exports', 'org.testfx/org.testfx.robot.impl=junit',
+                        '--add-exports', 'org.testfx/org.testfx.toolkit.impl=junit',
+                        '--add-exports', 'org.testfx/org.testfx.cases=junit',
+                        '--add-exports', 'org.testfx/org.testfx.cases.acceptance=junit',
+                        '--add-exports', 'org.testfx/org.testfx.cases.integration=junit',
+                        '--add-exports', 'org.testfx/org.testfx.cases.issue=junit',
+                        '--add-reads', "$moduleName=junit",
+                        '--add-reads', "$moduleName=javafx.fxml",
+                        '--add-opens', "$moduleName/org.testfx.service.query.impl=org.testfx",
+                        '--add-opens', "javafx.graphics/com.sun.glass.ui=$moduleName",
+                        '--add-exports', "javafx.graphics/com.sun.glass.ui=$moduleName",
+                        '--add-exports', "javafx.graphics/com.sun.javafx.application=$moduleName",
+                        '--add-exports', 'javafx.graphics/com.sun.glass.ui=org.testfx.monocle',
+                        '--add-exports', 'javafx.graphics/com.sun.javafx.application=org.testfx.monocle',
+                        '--add-exports', 'javafx.graphics/com.sun.glass.ui.delegate=org.testfx.monocle',
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir, sourceSets.test.resources.srcDirs).asPath,
+                ]
+                classpath = files()
+            }
         }
     }
-}
 
-jar {
-    inputs.property("moduleName", moduleName)
+    jar {
+        inputs.property("moduleName", moduleName)
 
-    manifest {
-        attributes('Automatic-Module-Name': moduleName)
-        instruction 'Export-Package', '*'
-        instruction 'Bundle-Activator', 'org.testfx.osgi.Activator'
-        instruction 'Require-Capability', 'org.testfx.osgi.versionadapter'
+        bnd (
+            'Export-Package': '*',
+            'Bundle-Activator': 'org.testfx.osgi.Activator',
+            'Require-Capability': 'org.testfx.osgi.versionadapter'
+        )
     }
 }
